2010-11-19  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_generalagente.php: Fixed the
	shows of IP in the agent view for bug 3111807

2010-11-19  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_extensions.php: added functions
	"get_disabled_extensions" and "getExtensionInfo".

	* operation/extensions.php: erased the delete extension option.

	* images/dot_green.disabled.png, images/dot_red.disabled.png: added files
	for the table of features extension.
	
	* godmode/extensions.php: show a table of extension with features and
	action to disable and delete.

2010-11-17  Miguel de Dios  <miguel.dedios@artica.es>
	
	* extensions/vnc_view.php: added first version of extension of to VNC view
	tab.

2010-11-17  Raúl Mateos  <raulofpandora@gmail.com>

	* operation/reporting/reporting_viewer.php, operation/reporting/graph_viewer.php:
	Added full screen mode and other minor changes.

2010-11-17  Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/reporting/map_builder_wizard.php: deleted old file of old visual
	console editor. 

2010-11-17  Raúl Mateos  <raulofpandora@gmail.com>

	* include/functions_events.php: Deleted old code. Simplify.

2010-11-17  Miguel de Dios  <miguel.dedios@artica.es>
	
	* pandora_console.redhat.spec: re-enabled the check dir "data_in" in
	spec file for package redhat-centos.

2010-11-15  Raúl Mateos  <raulofpandora@gmail.com>

	* include/functions_events.php: Show text in Agent detail when no events
	found. Commented old code.

2010-11-15  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/agentes/estado_ultimopaquete.php: fixed the single quote instead
	double quote.

2010-11-15  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/javascript/tiny_mce/plugins/table/editor_plugin.js,
	include/javascript/tiny_mce/plugins/advlink/editor_plugin.js,
	include/javascript/tiny_mce/plugins/fullscreen/editor_plugin.js,
	include/javascript/tiny_mce/plugins/template/editor_plugin.js,